Chart overflow issues fix

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@
 .bar {
   display: inline-block;
   width: 30px;
-  margin: 0 5px;
+  margin: 20px 5px;
   position: relative;
 }
 
